unpackaged/main/default/objects/SFDC_Department__c/SFDC_Department__c.object-meta.xml
<CustomObject>
    <description>Department  of the company</description>
    <label>Job Role</label>
    <nameField>
        <label>Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>