unpackaged/main/default/objects/SFDC_Department__c/fields/Interviewer_2__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>