unpackaged/main/default/objects/SFDC_Department__c/fields/Interviewer_3__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Job_Roles2</relationshipName>
    <type>Lookup</type>
</CustomField>