unpackaged/main/default/objects/SFDC_Department__c/fields/Is_Technical__c.field-meta.xml
<CustomField>
    <fullName>Is_Technical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Technical?</label>
    <type>Checkbox</type>
</CustomField>