unpackaged/main/default/objects/SFDC_Department__c/fields/Test_Link__c.field-meta.xml
<CustomField>
    <fullName>Test_Link__c</fullName>
    <label>Test Link</label>
    <type>Url</type>
</CustomField>