unpackaged/main/default/objects/SFDC_Department__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interviewer_1__c</columns>
    <columns>Interviewer_2__c</columns>
    <columns>Is_Technical__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>